Implémentation de l’endpoint post creation compte pour la version v1.5.0
